--- a/app/views/translator/translations/create.js.erb
+++ b/app/views/translator/translations/create.js.erb
@@ -1,8 +1,2 @@
 <% locale, key = params[:key].split(".")[0].to_sym, params[:key].sub(/^[a-z0-9\-_]*\./i, '') %>
-if(<%= @success == "true"%>)
-{
-  $("#<%= params[:key].gsub('.', '-') %>").replaceWith('<%= escape_javascript render(:partial => "form", :locals => {:key => key, :locale => locale, :save_status => "[updated]"}) %>');
-} else
-{
-  $("#<%= params[:key].gsub('.', '-') %>").replaceWith('<%= escape_javascript render(:partial => "form", :locals => {:key => key, :locale => locale, :save_status => "[failed]"}) %>');
-}
+$("#<%= params[:key].gsub('.', '-') %>").replaceWith('<%= escape_javascript render(:partial => "form", :locals => {:locale => locale, :key => key, :save_status => @success, :saved_value => @key_value}) %>');
