--- a/app/views/translator/translations/index.html.erb
+++ b/app/views/translator/translations/index.html.erb
@@ -27,7 +27,7 @@
       </h2>
 
       <% Translator.locales.each do |locale| %>
-        <%= render :partial => "form", :locals => {:locale => locale, :key => key, :save_status => "[]"} %>
+        <%= render :partial => "form", :locals => {:locale => locale, :key => key, :save_status => "[]", :saved_value => nil} %>
       <% end %>
     </div>
   <% end %>
